--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp": "^3.9.1",
     "gulp-postcss": "^7.0.0",
     "gulp-watch": "^4.3.11",
+    "postcss-hexrgba": "^0.2.1",
     "postcss-import": "^10.0.0",
     "postcss-mixins": "^6.0.0",
     "postcss-nested": "^2.0.2",
@@ -18,6 +19,7 @@
   },
   "dependencies": {
     "jquery": "^3.2.1",
+    "jquery-smooth-scroll": "^2.2.0",
     "normalize.css": "^7.0.0",
     "waypoints": "^4.0.1"
   }
